--- a/MomCallUToEat/MomCallUToEat.csproj
+++ b/MomCallUToEat/MomCallUToEat.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{C0B70ACA-4CE0-473E-A5C3-933933E355AD}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AutoShutdownPC</RootNamespace>
-    <AssemblyName>AutoShutdownPC</AssemblyName>
+    <RootNamespace>MomCallUToEat</RootNamespace>
+    <AssemblyName>MomCallUToEat</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -75,6 +75,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="app.config.json" />
     <None Include="Properties\Settings.settings">
